# django-startproject

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  justfile  manage.py  pyproject.toml
assets/css/: tailwind.css
docker/: Dockerfile  entrypoint.sh
project_name/: __init__.py  asgi.py  settings.py  urls.py  utils.py  wsgi.py
project_name/management/: base.py
project_name/templates/: base.html
tests/: test_truth.py
webapp/: .mypy.ini  asgi.py  settings.py  wsgi.py
