[project]
name="webapp"
version="0.1.0"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django-browser-reload>=1.17.0",
    "django-htmx>=1.21.0",
    "django-tailwind-cli[django-extensions]>=2.20.2",
    "django-typer[rich]>=2.4.0",
    "django-unique-user-email>=23.2",
    "django[argon2]>=5.1.3",
    "environs[django]>=11.2.1",
    "heroicons>=2.9.0",
    "whitenoise>=6.8.2",
    "django-stubs-ext>=5.1.1",
]

[project.optional-dependencies]
granian = [
    "granian[pname]>=1.6.4",
]

[dependency-groups]
dev = [
    "model-bakery>=1.20.0",
    "faker>=33.0.0",
    "django-stubs[compatible-mypy]>=5.1.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "webapp.settings"

[tool.coverage.run]
source = ["webapp"]
branch = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
exclude = ["**/migrations/*"]

# Allow unused variables when underscore-prefixed
[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "E",   # pycodestyle
  "F",   # pyflakes
  "FBT", # flake8-boolean-trap
  "N",   # pep8-naming
  "Q",   # flake8-quotes
  "TID", # flake8-tidy-imports
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore complexity
  "C901",
]

unfixable = [
  # Don't touch unused imports
  "F401",
  # Don't touch unused variables
  "F841",
]

# Exclude a variety of commonly ignored directories
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".hg",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "**pypackages**",
  "_build",
  "build",
  "dist",
  "migrations",
  "node_modules",
  "static",
]

[tool.ruff.lint.isort]
known-first-party = ["webapp"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["TID252"]
"tests.py" = ["TID252"]
